Added empty controller for game end points

--- a/swagger/index.html
+++ b/swagger/index.html
@@ -73,7 +73,7 @@ window.onload = function() {
   
   // Build a system
   const ui = SwaggerUIBundle({
-    url: "https://momo-wars-dev.firebaseapp.com/swagger/api.json",
+    url: "file:///home/max/github/momowars-backend/swagger/api.json",
     dom_id: '#swagger-ui',
     deepLinking: true,
     presets: [
